# pangea-sample-nginx-redact

./: Dockerfile  README.md  docker-compose.yml
conf.d/: example.conf  example.template
example/: Dockerfile  app.py  pyproject.toml
