[tool.poetry]
name = "example"
version = "0.0.1"
description = ""
authors = ["Michael Combs <michael.combs@pangea.cloud>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.2.2"
gunicorn = "^20.1.0"
faker = "^15.3.4"
lorem = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
